--- a/ProxmoxAnsible/tasks/env.yml
+++ b/ProxmoxAnsible/tasks/env.yml
@@ -21,6 +21,7 @@
           - JARVIS_GITHUB_TOKEN_SSH
           - JARVIS_POSTGRES_PASSWORD
       local_config:
+          JARVIS_DIR: '/root/.jarvis'
           JARVIS_CONFIGS_DIR: '/root/.jarvis/configs'
           JARVIS_NETWORK_PREFIX: '192.168.68'
           JARVIS_GATEWAY: '{{ local_config.JARVIS_NETWORK_PREFIX }}.1'
