--- a/ProxmoxAnsible/tasks/env.yml
+++ b/ProxmoxAnsible/tasks/env.yml
@@ -28,6 +28,7 @@
           JARVIS_DNS_SERVERS: ['8.8.8.8', '8.8.4.4']
           JARVIS_TZ: 'Asia/Kolkata'
           JARVIS_CERT_RESOLVER: 'letsencrypt'
+          JARVIS_COMMUNITY_SCRIPTS_URL: 'https://raw.githubusercontent.com/community-scripts/ProxmoxVE/main'
 
   block:
       - name: Ensure Doppler is Installed
